// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent-node-operators-registry e2e tests should process tx with a lot of validators exited 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATORS-BIG-EXIT",
    "description": "Operator: #13 Blockdaemon
New exited: 117",
    "labels": [],
    "metadata": {},
    "name": "⚠️ Curated NO Registry: operator exited more than 100 validators",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATORS-BIG-EXIT",
    "description": "Operator: #20 HashKey Cloud
New exited: 167",
    "labels": [],
    "metadata": {},
    "name": "⚠️ Curated NO Registry: operator exited more than 100 validators",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATORS-BIG-EXIT",
    "description": "Operator: #23 CryptoManufaktur
New exited: 117",
    "labels": [],
    "metadata": {},
    "name": "⚠️ Curated NO Registry: operator exited more than 100 validators",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATORS-BIG-EXIT",
    "description": "Operator: #24 Kukis Global
New exited: 117",
    "labels": [],
    "metadata": {},
    "name": "⚠️ Curated NO Registry: operator exited more than 100 validators",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATORS-BIG-EXIT",
    "description": "Operator: #25 Nethermind
New exited: 116",
    "labels": [],
    "metadata": {},
    "name": "⚠️ Curated NO Registry: operator exited more than 100 validators",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATORS-BIG-EXIT",
    "description": "Operator: #26 ChainSafe
New exited: 216",
    "labels": [],
    "metadata": {},
    "name": "⚠️ Curated NO Registry: operator exited more than 100 validators",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATORS-BIG-EXIT",
    "description": "Operator: #27 Prysm Team at Offchain Labs
New exited: 116",
    "labels": [],
    "metadata": {},
    "name": "⚠️ Curated NO Registry: operator exited more than 100 validators",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATORS-BIG-EXIT",
    "description": "Operator: #28 Sigma Prime
New exited: 116",
    "labels": [],
    "metadata": {},
    "name": "⚠️ Curated NO Registry: operator exited more than 100 validators",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATORS-BIG-EXIT",
    "description": "Operator: #29 Attestant (BVI) Limited
New exited: 116",
    "labels": [],
    "metadata": {},
    "name": "⚠️ Curated NO Registry: operator exited more than 100 validators",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`agent-node-operators-registry e2e tests should process tx with added Node operator 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-ADDED",
    "description": "Curated module Node operator 30 added
Name: Launchnodes
Reward address: [0x5a8B929EDBf3CE44526465DD2087EC7EFB59A561](https://etherscan.io/address/0x5a8B929EDBf3CE44526465DD2087EC7EFB59A561)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "30,Launchnodes,0x5a8B929EDBf3CE44526465DD2087EC7EFB59A561,0",
    },
    "name": "ℹ️ Curated NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-ADDED",
    "description": "Curated module Node operator 31 added
Name: SenseiNode
Reward address: [0xE556Da28015c04F35A52B3111B9F4120E908056e](https://etherscan.io/address/0xE556Da28015c04F35A52B3111B9F4120E908056e)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "31,SenseiNode,0xE556Da28015c04F35A52B3111B9F4120E908056e,0",
    },
    "name": "ℹ️ Curated NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`agent-node-operators-registry e2e tests should process tx with added simple dvt clusters 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "SDVT-NODE-OPERATOR-ADDED",
    "description": "SimpleDVT module Node operator 48 added
Name: Lido x SSV: Mysterious Manta
Reward address: [0xD0EB99690beda238C185D3D8f7cd35Ec014AD567](https://etherscan.io/address/0xD0EB99690beda238C185D3D8f7cd35Ec014AD567)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "48,Lido x SSV: Mysterious Manta,0xD0EB99690beda238C185D3D8f7cd35Ec014AD567,0",
    },
    "name": "ℹ️ SimpleDVT NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "SDVT-NODE-OPERATOR-ADDED",
    "description": "SimpleDVT module Node operator 49 added
Name: Lido x SSV: Noble Newt
Reward address: [0x7cFB8250D2CbCC4645342350959633800F3A03A3](https://etherscan.io/address/0x7cFB8250D2CbCC4645342350959633800F3A03A3)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "49,Lido x SSV: Noble Newt,0x7cFB8250D2CbCC4645342350959633800F3A03A3,0",
    },
    "name": "ℹ️ SimpleDVT NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "SDVT-NODE-OPERATOR-ADDED",
    "description": "SimpleDVT module Node operator 50 added
Name: Lido x SSV: Optimistic Orca
Reward address: [0xc292731e9d1862dCb3D5729F1ADe9760D3f99b43](https://etherscan.io/address/0xc292731e9d1862dCb3D5729F1ADe9760D3f99b43)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "50,Lido x SSV: Optimistic Orca,0xc292731e9d1862dCb3D5729F1ADe9760D3f99b43,0",
    },
    "name": "ℹ️ SimpleDVT NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "SDVT-NODE-OPERATOR-ADDED",
    "description": "SimpleDVT module Node operator 51 added
Name: Lido x SSV: Playful Penguin
Reward address: [0x9e29400E9E917c0C7c639245c731360fBc8F16AC](https://etherscan.io/address/0x9e29400E9E917c0C7c639245c731360fBc8F16AC)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "51,Lido x SSV: Playful Penguin,0x9e29400E9E917c0C7c639245c731360fBc8F16AC,0",
    },
    "name": "ℹ️ SimpleDVT NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "SDVT-NODE-OPERATOR-ADDED",
    "description": "SimpleDVT module Node operator 52 added
Name: Lido x SSV: Quiet Quetzal
Reward address: [0x19EcB86A441b6DFFA18379727eC8C0fd737a1140](https://etherscan.io/address/0x19EcB86A441b6DFFA18379727eC8C0fd737a1140)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "52,Lido x SSV: Quiet Quetzal,0x19EcB86A441b6DFFA18379727eC8C0fd737a1140,0",
    },
    "name": "ℹ️ SimpleDVT NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "SDVT-NODE-OPERATOR-ADDED",
    "description": "SimpleDVT module Node operator 53 added
Name: Lido x SSV: Resilient Rabbit
Reward address: [0xF8bF822F5De86879Fd0C2F9A67761D348d89c343](https://etherscan.io/address/0xF8bF822F5De86879Fd0C2F9A67761D348d89c343)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "53,Lido x SSV: Resilient Rabbit,0xF8bF822F5De86879Fd0C2F9A67761D348d89c343,0",
    },
    "name": "ℹ️ SimpleDVT NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "SDVT-NODE-OPERATOR-ADDED",
    "description": "SimpleDVT module Node operator 54 added
Name: Lido x SSV: Splendid Swan
Reward address: [0x222186393aA0b2b037ECEdddfDcb66ecA81C8888](https://etherscan.io/address/0x222186393aA0b2b037ECEdddfDcb66ecA81C8888)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "54,Lido x SSV: Splendid Swan,0x222186393aA0b2b037ECEdddfDcb66ecA81C8888,0",
    },
    "name": "ℹ️ SimpleDVT NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "SDVT-NODE-OPERATOR-ADDED",
    "description": "SimpleDVT module Node operator 55 added
Name: Lido x SSV: Thoughtful Tiger
Reward address: [0x95f8739ae18b5ffCeEa124968988c2287F295914](https://etherscan.io/address/0x95f8739ae18b5ffCeEa124968988c2287F295914)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "55,Lido x SSV: Thoughtful Tiger,0x95f8739ae18b5ffCeEa124968988c2287F295914,0",
    },
    "name": "ℹ️ SimpleDVT NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "SDVT-NODE-OPERATOR-ADDED",
    "description": "SimpleDVT module Node operator 56 added
Name: Lido x SSV: Unique Unicorn
Reward address: [0xa3477C96F2b1F7744cFAa854Dd36CDE3dF00b34f](https://etherscan.io/address/0xa3477C96F2b1F7744cFAa854Dd36CDE3dF00b34f)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "56,Lido x SSV: Unique Unicorn,0xa3477C96F2b1F7744cFAa854Dd36CDE3dF00b34f,0",
    },
    "name": "ℹ️ SimpleDVT NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`agent-node-operators-registry e2e tests should process tx with removed signing keys 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATORS-KEYS-REMOVED",
    "description": "Signing keys has been removed for:
 Kiln: 50",
    "labels": [],
    "metadata": {},
    "name": "🚨 Curated NO Registry: Signing keys removed",
    "protocol": "ethereum",
    "severity": 4,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`agent-node-operators-registry e2e tests should process tx with set NO target limit set 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-TARGET-VALIDATORS-COUNT-CHANGED",
    "description": "Curated module Node operator 1 target validators count changed to 0",
    "labels": [],
    "metadata": {
      "args": "1,0",
    },
    "name": "⚠️ Curated NO Registry: Node operator target validators count changed",
    "protocol": "ethereum",
    "severity": 3,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-ADDED",
    "description": "Curated module Node operator 32 added
Name: A41
Reward address: [0x2A64944eBFaFF8b6A0d07B222D3d83ac29c241a7](https://etherscan.io/address/0x2A64944eBFaFF8b6A0d07B222D3d83ac29c241a7)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "32,A41,0x2A64944eBFaFF8b6A0d07B222D3d83ac29c241a7,0",
    },
    "name": "ℹ️ Curated NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-ADDED",
    "description": "Curated module Node operator 33 added
Name: Develp GmbH
Reward address: [0x0a6a0b60fFeF196113b3530781df6e747DdC565e](https://etherscan.io/address/0x0a6a0b60fFeF196113b3530781df6e747DdC565e)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "33,Develp GmbH,0x0a6a0b60fFeF196113b3530781df6e747DdC565e,0",
    },
    "name": "ℹ️ Curated NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-ADDED",
    "description": "Curated module Node operator 34 added
Name: Ebunker
Reward address: [0x2A2245d1f47430b9f60adCFC63D158021E80A728](https://etherscan.io/address/0x2A2245d1f47430b9f60adCFC63D158021E80A728)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "34,Ebunker,0x2A2245d1f47430b9f60adCFC63D158021E80A728,0",
    },
    "name": "ℹ️ Curated NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-ADDED",
    "description": "Curated module Node operator 35 added
Name: Gateway.fm AS
Reward address: [0x78CEE97C23560279909c0215e084dB293F036774](https://etherscan.io/address/0x78CEE97C23560279909c0215e084dB293F036774)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "35,Gateway.fm AS,0x78CEE97C23560279909c0215e084dB293F036774,0",
    },
    "name": "ℹ️ Curated NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-ADDED",
    "description": "Curated module Node operator 36 added
Name: Numic
Reward address: [0x0209a89b6d9F707c14eB6cD4C3Fb519280a7E1AC](https://etherscan.io/address/0x0209a89b6d9F707c14eB6cD4C3Fb519280a7E1AC)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "36,Numic,0x0209a89b6d9F707c14eB6cD4C3Fb519280a7E1AC,0",
    },
    "name": "ℹ️ Curated NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-ADDED",
    "description": "Curated module Node operator 37 added
Name: ParaFi Technologies LLC
Reward address: [0x5Ee590eFfdf9456d5666002fBa05fbA8C3752CB7](https://etherscan.io/address/0x5Ee590eFfdf9456d5666002fBa05fbA8C3752CB7)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "37,ParaFi Technologies LLC,0x5Ee590eFfdf9456d5666002fBa05fbA8C3752CB7,0",
    },
    "name": "ℹ️ Curated NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-ADDED",
    "description": "Curated module Node operator 38 added
Name: RockawayX Infra
Reward address: [0xcA6817DAb36850D58375A10c78703CE49d41D25a](https://etherscan.io/address/0xcA6817DAb36850D58375A10c78703CE49d41D25a)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "38,RockawayX Infra,0xcA6817DAb36850D58375A10c78703CE49d41D25a,0",
    },
    "name": "ℹ️ Curated NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`agent-node-operators-registry e2e tests should process tx with setting node operator name 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-NAME-SET",
    "description": "Curated module Node operator [23 Galaxy] name set to Galaxy",
    "labels": [],
    "metadata": {
      "args": "23,Galaxy",
    },
    "name": "ℹ️ Curated NO Registry: Node operator name set",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-NAME-SET",
    "description": "Curated module Node operator [36 Pier Two] name set to Pier Two",
    "labels": [],
    "metadata": {
      "args": "36,Pier Two",
    },
    "name": "ℹ️ Curated NO Registry: Node operator name set",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-REWARD-ADDRESS-SET",
    "description": "Curated module Node operator [23 Galaxy] reward address set to [0x3C3F243263d3106Fdb31eCf2248f9bC82F723c4B](https://etherscan.io/address/0x3C3F243263d3106Fdb31eCf2248f9bC82F723c4B)",
    "labels": [],
    "metadata": {
      "args": "23,0x3C3F243263d3106Fdb31eCf2248f9bC82F723c4B",
    },
    "name": "ℹ️ Curated NO Registry: Node operator reward address set",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "NODE-OPERATOR-REWARD-ADDRESS-SET",
    "description": "Curated module Node operator [36 Pier Two] reward address set to [0x35921FB43cB92F5Bfef7cBA1e97Eb5A21Fc2d353](https://etherscan.io/address/0x35921FB43cB92F5Bfef7cBA1e97Eb5A21Fc2d353)",
    "labels": [],
    "metadata": {
      "args": "36,0x35921FB43cB92F5Bfef7cBA1e97Eb5A21Fc2d353",
    },
    "name": "ℹ️ Curated NO Registry: Node operator reward address set",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;
